# discodb

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build-and-test-u20.yml
doc/: capi.rst  cnf.rst  conf.py  index.rst  luaapi.rst  pythonapi.rst  query.rst  structure.rst
lua/: discotest.lua
python/: discodbmodule.c  discodbmodule.h  setup.py  setup_self_contained.py
python/discodb/: __init__.py  query.py  tools.py
python/util/: test_merge.py  test_merge2.py
src/: ddb_bits.h  ddb_cnf.c  ddb_cons.c  ddb_hash.h  ddb_huffman.c  ddb_profile.h  discodb.h
src/tests/: CJK.txt  animals.txt  create_and_merge.c  create_and_query.c  create_ddb_from_cjk_data.py  create_large_random_key_value_file.py  input.txt  mythology.txt
src/util/: invert.c  merge.c
